@@ -1,7 +1,7 @@
 #  File src/library/stats/R/na.ts.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2023 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -18,8 +18,9 @@
 
 na.contiguous <- function(object, ...) UseMethod("na.contiguous")
 
-na.contiguous.default <- function(object, ...)
+na.contiguous.default <- function(object, doTsp = !is.null(attr(object, "tsp")), ...)
 {
+    if(!length(object)) return(object)
     tm <- time(object)
     xfreq <- frequency(object)
     ## use (first) maximal contiguous length of non-NAs
@@ -27,23 +28,24 @@ na.contiguous.default <- function(object, ...)
         good <- apply(!is.na(object), 1L, all)
     else  good <- !is.na(object)
     if(!sum(good)) stop("all times contain an NA")
-    tt <- cumsum(!good)
+    tt <- c(0L, cumsum(!good))
     ln <- sapply(0:max(tt), function(i) sum(tt==i))
-    seg <- (seq_along(ln)[ln==max(ln)])[1L] - 1
-    keep <- (tt == seg)
+    seg <- (seq_along(ln)[ln==max(ln)])[1L] - 1L
+    keep <- (tt == seg)[-1L]
     st <- min(which(keep))
-    if(!good[st]) st <- st + 1
+    if(!good[st]) st <- st + 1L
     en <- max(which(keep))
     omit <- integer()
     n <- NROW(object)
-    if(st > 1) omit <- c(omit, 1L:(st-1))
-    if(en < n) omit <- c(omit, (en+1):n)
-    cl <- class(object)
+    if(st > 1L) omit <- c(omit, 1L:(st-1L))
+    if(en < n ) omit <- c(omit, (en+1L):n)
     if(length(omit)) {
+        cl <- class(object) ; force(doTsp) # before modification
         object <- if(is.matrix(object)) object[st:en,] else object[st:en]
         attr(omit, "class") <- "omit"
         attr(object, "na.action") <- omit
-        tsp(object) <- c(tm[st], tm[en], xfreq)
+        if(doTsp) # e.g., not if it was a simple vector/matrix
+            tsp(object) <- c(tm[st], tm[en], xfreq)
         if(!is.null(cl)) class(object) <- cl
     }
     object
