@@ -163,6 +163,12 @@
 
       \item Package code syntax on Windows is checked in UTF-8 when UTF-8 is
       the native encoding.
+
+      \item \code{na.contiguous(x)} now also returns the first run, when it
+      is at the beginning and there is a later one of the same length;
+      reported to R-devel, including a fix, by Georgi Boshnakov.
+      Further, by default, it modifies only an existing
+      \code{attr(*,"tsp")} but otherwise no longer sets one.
     }
   }
 }
